# new_pcb_robot

./: .gitignore  README.md  claude_prompt_hardware_interface
.claude/: settings.local.json
3d print files/: watergun_mount-Body.stl  watergun_mount.20260404-154915.FCBak  watergun_mount.FCStd
install/: local_setup.sh  setup.sh
log/: latest_build
src/autonomous_robot/: CMakeLists.txt  package.xml
src/autonomous_robot/autonomous_robot/: __init__.py  camera_to_ee.py  camera_to_ee_pickup.py  joint_state_merger.py
src/autonomous_robot/config/: gz_bridge.yaml  ik_vertical_angle.yaml  joystick.yaml  mapper_params_online_async.yaml  mini_pc_controllers.yaml  my_controllers.yaml  pan_tilt_view.rviz  twist_mux.yaml  (+1 more)
src/diffdrive_arduino/: CMakeLists.txt  package.xml
src/esp32_combined_hardware/: CMakeLists.txt
src/pan_tilt_description/: package.xml  setup.cfg  setup.py
src/pan_tilt_description/config/: pan_tilt_teleop.yaml
src/pan_tilt_description/launch/: pan_tilt.joy.launch.py  pan_tilt_gazebo.launch.py
src/pan_tilt_description/pan_tilt_description/: pan_tilt_teleop.py
src/pan_tilt_description/urdf/: pan_tilt.xacro  pan_tilt_standalone.xacro  pan_tilt_test.xacro  ros2_control_gazebo.xacro  ros2_control_pan_tilt.xacro
src/pan_tilt_description/urdf/meshes/stls/: PAN-TILT_BASE_V1_fixed.dae  PAN-TILT_BASE_V1_fixed.stl  PAN-TILT_LEG_V2_fixed.stl  PAN-TILT_ROTOR_V2_fixed.stl  center_stl.py  pi_stand_final_v2-Body_v2.stl  pi_stand_final_v2-Body_v2_fixed.stl  repair.mlx
src/pan_tilt_hardware/: CMakeLists.txt  README.md  package.xml  pan_tilt_hardware.xml
(+213 files in other folders)
