<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pan_tilt_description</name>
  <version>0.0.0</version>
  <description>Pan tilt mechanism description with joystick teleop control for ROS2 Jazzy and Gazebo Harmonic</description>
  <maintainer email="me@me.com">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>joy</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>forward_command_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>gz_ros2_control</depend>
  <depend>xacro</depend>

  <!-- <exec_depend>image_sync_processor</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
